Added all depandencies

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
         <title>Travel Agency</title>
     </head>
     <body ng-app="app">
+        <navbar></navbar>
       	<ui-view></ui-view>
+        <myfooter></myfooter>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2UA2D1ECYSvCMUC9D8az55u7L6Nx4e04"></script>
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <script src="/bundle.js"></script>
